# xKippo

./: CLAUDE.md  LICENSE  MANIFEST.in  README.md  create_working_launcher.sh  debug_startup.py  honeypot-monitor-launcher.sh  install.sh  install_launcher.sh  pyproject.toml  requirements.txt  setup.py  simple_monitor.py  simple_tui.py  test_cowrie_parsing.py  test_integration_simple.py  test_log_monitor.py  test_memory_simple.py  update.sh
.claude/: context.md  implementation_summary.md
.kiro/specs/honeypot-monitor-cli/: design.md  requirements.md  tasks.md
config/: default.yaml
docs/: CONFIGURATION_EXAMPLES.md  DEVELOPER_GUIDE.md  FAQ.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: build-dist.sh  verify-install.sh
src/honeypot_monitor/: __init__.py  main.py
src/honeypot_monitor/config/: __init__.py  config_manager.py  settings.py
src/honeypot_monitor/interfaces/: __init__.py  analyzer_interface.py  log_parser_interface.py  monitor_interface.py  notifier_interface.py
src/honeypot_monitor/models/: __init__.py  converters.py  irc_alert.py  log_entry.py  session.py  threat_assessment.py
src/honeypot_monitor/services/: __init__.py  alert_manager.py  event_manager.py  irc_notifier.py  log_monitor.py  log_parser.py  memory_manager.py  performance_monitor.py  service_coordinator.py  threat_analyzer.py
src/honeypot_monitor/tui/: __init__.py  analysis_panel.py  analysis_panel.tcss  dashboard.py  dashboard.tcss  log_viewer.py  main_app.py  main_app.tcss  settings_panel.py  settings_panel.tcss
src/honeypot_monitor_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: honeypot-monitor.service
tests/: __init__.py
tests/test_config/: __init__.py  test_config_manager.py
tests/test_integration/: README.md  run_integration_tests.py  test_basic_integration.py  test_comprehensive_integration.py  test_core_integration.py  test_performance_benchmarks.py  test_service_integration.py
tests/test_integration/mock_data/: sample_kippo_logs.py
tests/test_models/: __init__.py  test_converters.py  test_irc_alert.py  test_log_entry.py  test_session.py  test_threat_assessment.py
tests/test_performance/: test_memory_performance.py
tests/test_services/: __init__.py  test_alert_manager.py  test_irc_integration.py  test_irc_notifier.py  test_log_monitor.py  test_log_monitor_integration.py  test_log_parser.py  test_log_parser_advanced.py  test_threat_analyzer.py
tests/test_tui/: __init__.py  test_analysis_panel.py  test_dashboard.py  test_log_viewer.py  test_main_app.py  test_settings_panel.py
